[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
openenv = "openenv_cli:cli"

[tool.setuptools]
py-modules = ["openenv_cli", "inference", "server", "validate_openenv"]

[tool.setuptools.packages.find]
include = ["env*"]
