[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv = "openenv_cli:cli"
server = "server:main"

[tool.setuptools]
py-modules = ["openenv_cli", "inference", "validate_openenv"]

[tool.setuptools.packages.find]
include = ["env*", "server*"]
